Add post mapping to add an pokemon, Also basic refactor.